If a while expression is unfinished, don't execute it at all.

BUG: 280136